--- a/pyproject.toml
+++ b/pyproject.toml
@@ -88,6 +88,7 @@ ignore = [
   "D203",
   # pydocstyle: Allow blank line after docstring
   "D202",
+  "COM812",
 ]
 
 [tool.ruff.flake8-tidy-imports]
